# MultiCameraAndroidDemo

./: .gitignore  mykey.jks  settings.gradle.kts
app/: .gitignore  build.gradle.kts
app/src/androidTest/java/com/blink/monitor/: ExampleInstrumentedTest.kt
app/src/main/: AndroidManifest.xml
app/src/main/cpp/: CMakeLists.txt  LogcatBuffer.cpp  LogcatBuffer.hpp  media-codec.cpp  native-lib.cpp  sdk_checkout.sh  server-lib.cpp  topic.hpp
app/src/main/java/com/blink/monitor/: BLRTCServerSession.kt  BLRTCSession.kt  BaseBindingActivity.kt  CameraActivity.kt  CaptureDevicesActivity.kt  (+10 more)
app/src/main/res/anim/: modal_in.xml  modal_out.xml
app/src/main/res/drawable/: bg_titlebar.xml  cap_device_item_selector.xml  ic_battery_0.xml  ic_battery_100.xml  ic_battery_20.xml  ic_battery_40.xml  ic_battery_60.xml  ic_battery_80.xml  ic_direction_arrow_opacity.xml  ic_direction_arrow_solid.xml  ic_live_push_home.xml  ic_phone.xml  ic_record_start.xml  ic_remote_battery_100.xml  ic_remote_disconnect.xml  ic_scoreboard.xml  icon_change_direction.xml  icon_change_direction_selected.xml  icon_dot_mark.xml  icon_hide.xml  icon_hide_selected.xml  icon_home.xml  icon_mute.xml  icon_mute_selected.xml  icon_score_board.xml  icon_score_board_selected.xml  part_item_selector.xml  score_board_regular_gradient.xml  score_board_triangle_left.xml  score_board_triangle_right.xml  score_check_style.xml  score_count_add_selector.xml  score_count_del_selector.xml  selector_change_direction.xml  selector_hide.xml  selector_mute.xml  selector_score_board.xml  shape_black_20alpha_6raduis_button.xml  shape_black_half_transparent.xml  shape_corner_gray.xml  (+6 more)
app/src/main/res/drawable-xxhdpi/: ic_camera_setting_unselect.xml
app/src/main/res/layout/: activity_camera.xml  activity_capture_devices.xml  activity_demo_plate.xml  activity_guide_connect.xml  activity_main.xml  activity_monitor_capture_devices.xml  activity_video.xml  activity_wifi.xml  color_plate_container.xml  fragment_score_count_page.xml  fragment_team_container.xml  item_capture_device.xml  score_board_regular.xml  score_count_view.xml  tab_custom_view.xml  window_score_board.xml
app/src/main/res/layout-land/: activity_monitor.xml
app/src/main/res/values/: attrs.xml  ids.xml  strings.xml  themes.xml
app/src/main/res/values-night/: themes.xml
app/src/main/res/values-zh/: strings.xml
gradle/: libs.versions.toml
gradle/wrapper/: gradle-wrapper.properties
(+22 files in other folders)
